testing/tests/ui/lit_on_assignment_lhs.stderr
error: literals are not allowed on the left-hand side of an assignment
 --> MyTemplate.txt:1:3
  |
       1 | {%let 7=x%}
         |   ^ close to this token
         |
 --> tests/ui/lit_on_assignment_lhs.rs:5:5
  |
5 |     source = "{%let 7=x%}",
  |     ^^^^^^
